2011-03-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wtext.c: Make more stuff module-local.  Resolve several
	signedness conflicts introduced by functions in new screenbuf.c
	module.

2011-03-25  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c (main), src/win/winmain.c (WinMain, WinExit),
	src/win/wcommon.h: The code which changes the codepages for
	console gnuplot is only compiled in if CONSOLE_SWITCH_CP is
	defined.  Otherwise gnuplot will only display a warning if
	codepages differ.  Handle the case when codepages already match.

2011-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/Makefile.maint: Fill in the "last modified" date from the most
	recent entry in the ChangeLog rather than the using the current date,
	and only then if the VERSION or PATCHLEVEL has been changed.
	Caution: tested only under linux with gnu make.

2011-03-22  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/graphics.c (do_plot, plot_points): Test wether the terminal 
	actually supports set_color. Fixes crashes with terminal dumb.

2011-03-21  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WIN_image): Fix regression: rotation of images
	with reversed axis was not working since rev. 1.92.

2011-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (equals): Test here for token index in range, rather than
	trusting all callers to get it right.

	* src/command.c src/parse.c: Token index range test is now redundant.

	* docs/gnuplot.doc: Document that ^D from an empty line acts as EOF.

2011-03-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.c|h, src/win/wgraph.c, src/win/winmain.c, 
	src/win/wmenu.c, src/win/wpause.c, src/win/wtext.c: FAR pointers are
	no longer required.

	* src/win/winmain.c (WinExit): Explicitly close help window on exit.
	Fixes hangs of gnuplot when it is closed via the Windows taskbar 
	and help window	and graph window open.
